--- a/reviews/articulos/huntdown/index.html
+++ b/reviews/articulos/huntdown/index.html
@@ -24,7 +24,7 @@
 
     <!-- LOGO -->
     <div id="logo">
-      <h1><a href="./index.html">bit<span>&</span>px<span><img src="/tfg/img/logo.png" width="50" height="50" /></span></a></h1>
+      <h1><a href="./index.html">bit<span>&</span>px<span><img src="../../../img/logo.png" width="50" height="50" /></span></a></h1>
       <p class="descripcion">Tu portal de juegos</p>
     </div>
     <!-- FIN LOGO -->
